--- a/settings.json
+++ b/settings.json
@@ -1,1 +1,25 @@
-{"techno_station_url": "http://www.psytube.at:19120/", "favorite_station_url": "http://144.217.253.136:8564/stream", "progressive_psy_trance_station_url": "http://www.psytube.at:12120/", "classical_station_url": "http://174.36.206.197:8000", "country_station_url": "http://50.7.70.58:8708/", "orochill_psy_trance_station_url": "http://www.psytube.at:10120/", "fullon_psy_trance_station_url": "http://www.psytube.at:13120/", "suomi_psy_trance_station_url": "http://www.psytube.at:16120/", "drumnbass_station_url": "http://www.psytube.at:11120/", "christmas_station_url": "http://144.217.180.30:8016/stream", "minimal_techno_station_url": "http://www.psytube.at:14120/", "forest_psy_trance_station_url": "http://www.psytube.at:15120/", "rock_station_url": "http://144.217.253.136:8564/stream", "__mycroft_skill_firstrun": false, "childrens_station_url": "http://14123.live.streamtheworld.com/SAM01AAC213_SC", "top40_station_url": "http://bbcmedia.ic.llnwd.net/stream/bbcmedia_radio1_mf_p", "jazz_station_url": "http://149.56.155.209:80/live", "dark_progressive_psy_trance_station_url": "http://www.psytube.at:17120/", "hitech_psy_trance_station_url": "http://www.psytube.at:18120/", "dark_psy_trance_station_url": "http://www.psytube.at:8120/", "favorit_station_url": "http://144.217.253.136:8564/stream", "goa_psy_trance_station_url": "http://www.psytube.at:9120/"}
+{
+  "techno_station_url": "http://www.psytube.at:19120/",
+  "favorite_station_url": "https://streamingv2.shoutcast.com/totallyradio-70s/889024/;stream.mp3",
+  "progressive_psy_trance_station_url": "http://www.psytube.at:12120/",
+  "classical_station_url": "http://174.36.206.197:8000",
+  "country_station_url": "https://streaming.radio.co/sf7c50e12d/listen",
+  "orochill_psy_trance_station_url": "http://www.psytube.at:10120/",
+  "fullon_psy_trance_station_url": "http://www.psytube.at:13120/",
+  "suomi_psy_trance_station_url": "http://www.psytube.at:16120/",
+  "drumnbass_station_url": "http://www.psytube.at:11120/",
+  "christmas_station_url": "http://144.217.180.30:8016/stream",
+  "minimal_techno_station_url": "http://www.psytube.at:14120/",
+  "forest_psy_trance_station_url": "http://www.psytube.at:15120/",
+  "rock_station_url": "https://listen.radionomy.com/CLASSIC-ROCK-FLORIDA",
+  "__mycroft_skill_firstrun": false,
+  "childrens_station_url": "http://14123.live.streamtheworld.com/SAM01AAC213_SC",
+  "top40_station_url": "http://bbcmedia.ic.llnwd.net/stream/bbcmedia_radio1_mf_p",
+  "jazz_station_url": "https://www.internet-radio.com/servers/tools/playlistgenerator/?u=http://uk3.internet-radio.com:8405/live.m3u&t=.pls",
+  "dark_progressive_psy_trance_station_url": "http://www.psytube.at:17120/",
+  "hitech_psy_trance_station_url": "http://www.psytube.at:18120/",
+  "dark_psy_trance_station_url": "http://www.psytube.at:8120/",
+  "favorit_station_url": "http://144.217.253.136:8564/stream",
+  "goa_psy_trance_station_url": "http://www.psytube.at:9120/",
+  "station_url": "https://streamingv2.shoutcast.com/totallyradio-70s/889024/;stream.mp3"
+}
