--- a/settingsmeta.json
+++ b/settingsmeta.json
@@ -1,227 +1,226 @@
 {
-    "name": "Internet-Radio",
     "skillMetadata": {
-        "sections": [
+      "sections": [
+        {
+          "name": "Favorite Station URL",
+          "fields": [
             {
-                "name": "Favorite Station URL",
-                "fields": [
-                    {
-                        "name": "favorite_station_url",
-                        "type": "text",
-                        "label": "Favorite Station URL",
-                        "value": "http://144.217.253.136:8564/stream"
-                    }
-                ]
-            },
-            {
-                "name": "Rock Station URL",
-                "fields": [
-                    {
-                        "name": "rock_station_url",
-                        "type": "text",
-                        "label": "Rock Station URL",
-                        "value": "http://144.217.253.136:8564/stream"
-                    }
-                ]
-            },
-            {
-                "name": "Country Station URL",
-                "fields": [
-                    {
-                        "name": "country_station_url",
-                        "type": "text",
-                        "label": "Country Station URL",
-                        "value": "http://50.7.70.58:8708/"
-                    }
-                ]
-            },
-            {
-                "name": "Classical Station URL",
-                "fields": [
-                    {
-                        "name": "classical_station_url",
-                        "type": "text",
-                        "label": "Classical Station URL",
-                        "value": "http://174.36.206.197:8000"
-                    }
-                ]
-            },
-            {
-                "name": "Top 40 Station URL",
-                "fields": [
-                    {
-                        "name": "top40_station_url",
-                        "type": "text",
-                        "label": "Top 40 Station URL",
-                        "value": "http://bbcmedia.ic.llnwd.net/stream/bbcmedia_radio1_mf_p"
-                    }
-                ]
-            },
-            {
-                "name": "Christmas Station URL",
-                "fields": [
-                    {
-                        "name": "christmas_station_url",
-                        "type": "text",
-                        "label": "Christmas Station URL",
-                        "value": "http://144.217.180.30:8016/stream"
-                    }
-                ]
-            },
-            {
-                "name": "Children's Station URL",
-                "fields": [
-                    {
-                        "name": "childrens_station_url",
-                        "type": "text",
-                        "label": "Children's Station URL",
-                        "value": "http://14123.live.streamtheworld.com/SAM01AAC213_SC"
-                    }
-                ]
-            },
-            {
-                "name": "Jazz Station URL",
-                "fields": [
-                    {
-                        "name": "jazz_station_url",
-                        "type": "text",
-                        "label": "Jazz Station URL",
-                        "value": "http://149.56.155.209:80/live"
-                    }
-                ]
-            },
-            {
-                "name": "Minimal Techno Station URL",
-                "fields": [
-                    {
-                        "name": "minimal_techno_station_url",
-                        "type": "text",
-                        "label": "Minimal Techno Station URL",
-                        "value": "http://www.psytube.at:14120/"
-                    }
-                ]
-            },
-            {
-                "name": "Techno Station URL",
-                "fields": [
-                    {
-                        "name": "techno_station_url",
-                        "type": "text",
-                        "label": "Techno Station URL",
-                        "value": "http://www.psytube.at:19120/"
-                    }
-                ]
-            },
-            {
-                "name": "Drum&Bass Station URL",
-                "fields": [
-                    {
-                        "name": "drumnbass_station_url",
-                        "type": "text",
-                        "label": "Drum&Bass Station URL",
-                        "value": "http://www.psytube.at:11120/"
-                    }
-                ]
-            },
-            {
-                "name": "Progressive PsyTrance Station URL",
-                "fields": [
-                    {
-                        "name": "progressive_psy_trance_station_url",
-                        "type": "text",
-                        "label": "Progressive PsyTrance Station URL",
-                        "value": "http://www.psytube.at:12120/"
-                    }
-                ]
-            },
-            {
-                "name": "Dark Progressive PsyTrance Station URL",
-                "fields": [
-                    {
-                        "name": "dark_progressive_psy_trance_station_url",
-                        "type": "text",
-                        "label": "Dark Progressive PsyTrance Station URL",
-                        "value": "http://www.psytube.at:17120/"
-                    }
-                ]
-            },
-            {
-                "name": "Goa PsyTrance Station URL",
-                "fields": [
-                    {
-                        "name": "goa_psy_trance_station_url",
-                        "type": "text",
-                        "label": "Goa PsyTrance Station URL",
-                        "value": "http://www.psytube.at:9120/"
-                    }
-                ]
-            },
-            {
-                "name": "FullOn PsyTrance Station URL",
-                "fields": [
-                    {
-                        "name": "fullon_psy_trance_station_url",
-                        "type": "text",
-                        "label": "FullOn PsyTrance Station URL",
-                        "value": "http://www.psytube.at:13120/"
-                    }
-                ]
-            },
-            {
-                "name": "Suomi PsyTrance Station URL",
-                "fields": [
-                    {
-                        "name": "suomi_psy_trance_station_url",
-                        "type": "text",
-                        "label": "Suomi PsyTrance Station URL",
-                        "value": "http://www.psytube.at:16120/"
-                    }
-                ]
-            },
-            {
-                "name": "Forest PsyTrance Station URL",
-                "fields": [
-                    {
-                        "name": "forest_psy_trance_station_url",
-                        "type": "text",
-                        "label": "Forest PsyTrance Station URL",
-                        "value": "http://www.psytube.at:15120/"
-                    }
-                ]
-            },
-            {
-                "name": "Dark PsyTrance Station URL",
-                "fields": [
-                    {
-                        "name": "dark_psy_trance_station_url",
-                        "type": "text",
-                        "label": "Dark PsyTrance Station URL",
-                        "value": "http://www.psytube.at:8120/"
-                    }
-                ]
-            },
-            {
-                "name": "HiTech/Core PsyTrance Station URL",
-                "fields": [
-                    {
-                        "name": "hitech_psy_trance_station_url",
-                        "type": "text",
-                        "label": "HiTech/Core PsyTrance Station URL",
-                        "value": "http://www.psytube.at:18120/"
-                    }
-                ]
-            },
-            {
-                "name": "Orochill PsyTrance Station URL",
-                "fields": [
-                    {
-                        "name": "orochill_psy_trance_station_url",
-                        "type": "text",
-                        "label": "Orochill PsyTrance Station URL",
-                        "value": "http://www.psytube.at:10120/"
-                    }
-                ]
+              "name": "favorite_station_url",
+              "type": "text",
+              "label": "Favorite Station URL",
+              "value": "https://streamingv2.shoutcast.com/totallyradio-70s/889024/;stream.mp3"
             }
-        ]
+          ]
+        },
+        {
+          "name": "Rock Station URL",
+          "fields": [
+            {
+              "name": "rock_station_url",
+              "type": "text",
+              "label": "Rock Station URL",
+              "value": "https://listen.radionomy.com/CLASSIC-ROCK-FLORIDA"
+            }
+          ]
+        },
+        {
+          "name": "Country Station URL",
+          "fields": [
+            {
+              "name": "country_station_url",
+              "type": "text",
+              "label": "Country Station URL",
+              "value": "https://streaming.radio.co/sf7c50e12d/listen"
+            }
+          ]
+        },
+        {
+          "name": "Classical Station URL",
+          "fields": [
+            {
+              "name": "classical_station_url",
+              "type": "text",
+              "label": "Classical Station URL",
+              "value": "https://playerservices.streamtheworld.com/api/livestream-redirect/WQXR_CLASSICAL.mp3"
+            }
+          ]
+        },
+        {
+          "name": "Top 40 Station URL",
+          "fields": [
+            {
+              "name": "top40_station_url",
+              "type": "text",
+              "label": "Top 40 Station URL",
+              "value": "http://bbcmedia.ic.llnwd.net/stream/bbcmedia_radio1_mf_p"
+            }
+          ]
+        },
+        {
+          "name": "Christmas Station URL",
+          "fields": [
+            {
+              "name": "christmas_station_url",
+              "type": "text",
+              "label": "Christmas Station URL",
+              "value": "https://listen.streamon.fm/xmassong?usid=0-0-0-0-0-0-0-0-0&amsparams=playerid:streamonweb;skey:1649479301"
+            }
+          ]
+        },
+        {
+          "name": "Children's Station URL",
+          "fields": [
+            {
+              "name": "childrens_station_url",
+              "type": "text",
+              "label": "Children's Station URL",
+              "value": "https://playerservices.streamtheworld.com/api/livestream-redirect/WHYZEE.mp3"
+            }
+          ]
+        },
+        {
+          "name": "Jazz Station URL",
+          "fields": [
+            {
+              "name": "jazz_station_url",
+              "type": "text",
+              "label": "Jazz Station URL",
+              "value": "https://www.internet-radio.com/servers/tools/playlistgenerator/?u=http://uk3.internet-radio.com:8405/live.m3u&t=.pls"
+            }
+          ]
+        },
+        {
+          "name": "Minimal Techno Station URL",
+          "fields": [
+            {
+              "name": "minimal_techno_station_url",
+              "type": "text",
+              "label": "Minimal Techno Station URL",
+              "value": "https://streams.dnbradio.com:443/dnbradio.mp3"
+            }
+          ]
+        },
+        {
+          "name": "Techno Station URL",
+          "fields": [
+            {
+              "name": "techno_station_url",
+              "type": "text",
+              "label": "Techno Station URL",
+              "value": "http://radio.deepsound.net:8010/stream"
+            }
+          ]
+        },
+        {
+          "name": "Drum&Bass Station URL",
+          "fields": [
+            {
+              "name": "drumnbass_station_url",
+              "type": "text",
+              "label": "Drum&Bass Station URL",
+              "value": "https://streams.dnbradio.com:443/dnbradio.mp3"
+            }
+          ]
+        },
+        {
+          "name": "Progressive PsyTrance Station URL",
+          "fields": [
+            {
+              "name": "progressive_psy_trance_station_url",
+              "type": "text",
+              "label": "Progressive PsyTrance Station URL",
+              "value": "https://streams.digitallyimported.com/1mix/progressive.pls"
+            }
+          ]
+        },
+        {
+          "name": "Dark Progressive PsyTrance Station URL",
+          "fields": [
+            {
+              "name": "dark_progressive_psy_trance_station_url",
+              "type": "text",
+              "label": "Dark Progressive PsyTrance Station URL",
+              "value": "http://streams.radioparadise.com/progressive-128"
+            }
+          ]
+        },
+        {
+          "name": "Goa PsyTrance Station URL",
+          "fields": [
+            {
+              "name": "goa_psy_trance_station_url",
+              "type": "text",
+              "label": "Goa PsyTrance Station URL",
+              "value": "https://streams.digitallyimported.com/goapsy.pls"
+            }
+          ]
+        },
+        {
+          "name": "FullOn PsyTrance Station URL",
+          "fields": [
+            {
+              "name": "fullon_psy_trance_station_url",
+              "type": "text",
+              "label": "FullOn PsyTrance Station URL",
+              "value": "https://streams.digitallyimported.com/1mix/fullon.pls"
+            }
+          ]
+        },
+        {
+          "name": "Suomi PsyTrance Station URL",
+          "fields": [
+            {
+              "name": "suomi_psy_trance_station_url",
+              "type": "text",
+              "label": "Suomi PsyTrance Station URL",
+              "value": "https://streams.di.fm/suomisaundi"
+            }
+          ]
+        },
+        {
+          "name": "Forest PsyTrance Station URL",
+          "fields": [
+            {
+              "name": "forest_psy_trance_station_url",
+              "type": "text",
+              "label": "Forest PsyTrance Station URL",
+              "value": "https://streams.di.fm/forestpsy"
+            }
+          ]
+        },
+        {
+          "name": "Dark PsyTrance Station URL",
+          "fields": [
+            {
+              "name": "dark_psy_trance_station_url",
+              "type": "text",
+              "label": "Dark PsyTrance Station URL",
+              "value": "https://streams.di.fm/darkpsy"
+            }
+          ]
+        },
+        {
+          "name": "HiTech/Core PsyTrance Station URL",
+          "fields": [
+            {
+              "name": "hitech_psy_trance_station_url",
+              "type": "text",
+              "label": "HiTech/Core PsyTrance Station URL",
+              "value": "https://streams.di.fm/hitech"
+            }
+          ]
+        },
+        {
+          "name": "Orochill PsyTrance Station URL",
+          "fields": [
+            {
+              "name": "orochill_psy_trance_station_url",
+              "type": "text",
+              "label": "Orochill PsyTrance Station URL",
+              "value": "https://streams.di.fm/orochill"
+            }
+          ]
+        }
+      ]
     }
-}
+  }
